refactor: update variable names and method signatures
- Renamed variables for better readability in Base, Ep, Group,
  Mylist, Path, and ACon classes.
- Changed method signatures to improve clarity and consistency
  across the codebase.
- Updated serialization methods to reflect new variable names.
- Adjusted sorting and comparison logic in relevant classes.